Added Swing Object Durability
Added Durability functionality (Currently just deletes the relevent swing object. )

--- a/MM_Prototype 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -178,7 +178,7 @@ PhysicsConstraintActor=PhysicsConstraintActor.Angular Limits.Swing Limits,Physic
 SwingConstraint_Blueprint_C=SwingConstraint_Blueprint_C.Angular Limits.Swing Limits,SwingConstraint_Blueprint_C.Angular Limits.Twist Limits,SwingConstraint_Blueprint_C.LinearMotor.Linear Position Drive,SwingConstraint_Blueprint_C.LinearMotor.Linear Velocity Drive,SwingConstraint_Blueprint_C.AngularMotor.Orientation Drive,SwingConstraint_Blueprint_C.AngularMotor.Velocity Drive,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/MourningMirrorsVS/Core/Characters
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -207,7 +207,9 @@ LastLevel=/Game/MourningMirrorsVS/Maps/VerticalSlice
 LastLogListing=PIE
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/MourningMirrorsVS/Core/Interactables/BP_Swing.BP_Swing
+OpenAssetsAtExit=/Game/MourningMirrorsVS/Core/Characters/BP_Player.BP_Player
 
 [DetailCategories]
 Generic.Surface Materials=True
@@ -843,6 +845,31 @@ FirstPersonGameMode_C.Classes=True
 FirstPersonGameMode_C.Game=True
 FirstPersonGameMode_C.GameMode=True
 K2Node_InputAxisEvent.Input=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MulticastInlineDelegateProperty.DelegateInputs=True
+MulticastInlineDelegateProperty.Variable=True
+MulticastInlineDelegateProperty.DefaultValueCategory=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -853,8 +880,8 @@ BP_PlayerNew_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" 
 BP_PlayerBackup_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 BP_Swing_C=
 PhysicsConstraintComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
-SceneComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
-ActorComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
+SceneComponent=
+ActorComponent=
 Object=
 ProjectPackagingSettings="\"Object.Packaging.IniKeyBlacklist\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -884,16 +911,19 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MourningMirrorsVS/Core/Characters/BP_Player
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem2=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem3=/Game/MourningMirrorsVS/Core/Characters/SwingConstraint_Blueprint
-MRUItem4=/Game/MourningMirrorsVS/Core/Interactables/BP_Swing
-MRUItem5=/Game/MourningMirrorsVS/Maps/Vertical_Slice_T2_1
-MRUItem6=/Game/MourningMirrorsVS/Core/Characters/BP_PlayerNew
-MRUItem7=/Game/MourningMirrorsVS/Core/Interactables/BP_Movable
-MRUItem8=/Game/MourningMirrorsVS/Core/Pickups/BP_MirrorFragment
-MRUItem9=/Game/MourningMirrorsVS/Placeables/BP_Swing_StalactiteSolid
-MRUItem10=/Game/MourningMirrorsVS/Characters/DefaultArms_Mesh
+MRUItem1=/Game/MourningMirrorsVS/Core/Interactables/BP_Swing
+MRUItem2=/Game/MMPlankHigh
+MRUItem3=/Game/Material
+MRUItem4=/Game/MMPlankNormal
+MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem6=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem7=/Game/MourningMirrorsVS/Core/Characters/SwingConstraint_Blueprint
+MRUItem8=/Game/MourningMirrorsVS/Maps/Vertical_Slice_T2_1
+MRUItem9=/Game/MourningMirrorsVS/Core/Characters/BP_PlayerNew
+MRUItem10=/Game/MourningMirrorsVS/Core/Interactables/BP_Movable
+MRUItem11=/Game/MourningMirrorsVS/Core/Pickups/BP_MirrorFragment
+MRUItem12=/Game/MourningMirrorsVS/Placeables/BP_Swing_StalactiteSolid
+MRUItem13=/Game/MourningMirrorsVS/Characters/DefaultArms_Mesh
 
 [AssetEditorToolkitTabLocation]
 /Game/MourningMirrorsVS/Core/Characters/BP_Player.BP_Player=1
@@ -1656,6 +1686,7 @@ HierarchicalLODUtilities.TimeStamp=2020.04.16-21.20.07
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/MMPlankHigh.MMPlankHigh;
 RecentlyPlaced=/Script/Engine.PhysicsConstraintActor;
 RecentlyPlaced=/Game/MourningMirrorsVS/Placeables/BP_Swing_StalactiteSolid.BP_Swing_StalactiteSolid;
 RecentlyPlaced=/Game/MourningMirrorsVS/Core/Interactables/BP_Swing.BP_Swing;
@@ -1707,5 +1738,154 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
