Implimented the "Zipline" Mechanic
ziplining current removes all motion, then applies a force to the player pulling them to any visible surface within range. Once attatched the player can look around freely.

--- a/MM_Prototype 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -207,9 +207,7 @@ LastLevel=/Game/MourningMirrorsVS/Maps/VerticalSlice
 LastLogListing=PIE
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/MourningMirrorsVS/Core/Interactables/BP_Swing.BP_Swing
-OpenAssetsAtExit=/Game/MourningMirrorsVS/Core/Characters/BP_Player.BP_Player
+CleanShutdown=True
 
 [DetailCategories]
 Generic.Surface Materials=True
@@ -870,6 +868,15 @@ MaterialExpressionTextureSample.MaterialExpression=True
 MulticastInlineDelegateProperty.DelegateInputs=True
 MulticastInlineDelegateProperty.Variable=True
 MulticastInlineDelegateProperty.DefaultValueCategory=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+PlayerController.TransformCommon=True
+PlayerController.PlayerController=True
+PlayerController.MouseInterface=True
+PlayerController.Game=True
+PlayerController.Replication=True
+PlayerController.Input=True
+PlayerController.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
