--- a/MM_Prototype/MM_Prototype.uproject
+++ b/MM_Prototype/MM_Prototype.uproject
@@ -1,6 +1,16 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{B3F431A3-4861-3EA9-50BB-0CA744F25D4E}",
+	"EngineAssociation": "4.24",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Modules": [
+		{
+			"Name": "MM_Prototype",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
+		}
+	]
 }
