--- a/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1959,7 +1959,7 @@ MRUItem18=/Game/MourningMirrorsVS/MaterialLibrary/MF_MacroVariation
 MRUItem19=/Game/MourningMirrorsVS/MaterialLibrary/MI_Grass
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [DetailCategoriesAdvanced]
 Landscape.Landscape=False
@@ -2180,7 +2180,7 @@ ExtrudeCoordsWarning=False
 ChangeVariableType_Warning=False
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [WorldBrowser]
 DisplayPaths=False
